# Agentic_projects

./: README.md
crewai_gym_trainer/gym_trainer/: .gitignore  LICENSE  README.md  gradio_ui.py  pyproject.toml
crewai_gym_trainer/gym_trainer/src/gym_trainer/: crew.py  main.py
crewai_gym_trainer/gym_trainer/src/gym_trainer/config/: agents.yaml  tasks.yaml
crewai_gym_trainer/gym_trainer/src/gym_trainer/tools/: email.py
langgraph_email_agent/: README.md  main.py  playground.ipynb  requirements.txt
langgraph_email_agent/utils/: email_utils.py  login.py
