[project]
name = "gym_trainer"
version = "0.1.0"
description = "gym_trainer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "gradio>=5.35.0",
]

[project.scripts]
gym_trainer = "gym_trainer.main:run"
run_crew = "gym_trainer.main:run"
train = "gym_trainer.main:train"
replay = "gym_trainer.main:replay"
test = "gym_trainer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
